# lecture_robot_programing

color_box/blue_box/: CMakeLists.txt  package.xml
color_box/blue_box/launch/: display.launch  gazebo.launch
color_box/blue_box/urdf/: blue_box.urdf
color_box/green_box/: CMakeLists.txt  package.xml
color_box/green_box/launch/: display.launch  gazebo.launch
color_box/green_box/meshes/: green_box.STL
color_box/green_box/urdf/: green_box.urdf
color_box/red_box/: CMakeLists.txt  package.xml
color_box/red_box/launch/: display.launch  gazebo.launch
color_box/red_box/urdf/: red_box.urdf
conveyor/: CMakeLists.txt  package.xml
conveyor/launch/: display.launch  gazebo.launch
conveyor/meshes/: base_link.STL
conveyor/urdf/: conveyor.urdf
mobile_d/: CMakeLists.txt  package.xml
mobile_d/config/: controller.yaml  joint_names_mobile_d.yaml
mobile_d/launch/: display.launch  gazebo.launch
mobile_d/meshes/: base_link.STL  cam.STL  caster.STL  dumper.STL  left_wheel.STL  lidar.STL  right_wheel.STL  wheel_connector.STL
mobile_d/script/: cam_steer.py  detection.py
mobile_d/urdf/: mobile_d.urdf
mobile_d/world/: map.world
mobile_d/world/mapping.wolrd/: model.config  model.sdf
model/: pocketball.stl
paduck/: CMakeLists.txt  package.xml
paduck/config/: joint_names_paduck.yaml
paduck/launch/: display.launch  gazebo.launch
paduck/meshes/: base.STL  body.STL  wheel_1.STL  wheel_2.STL  wheel_4.STL
paduck/scripts/: pabuck_move.py
paduck/urdf/: paduck.urdf
paper_box/: CMakeLists.txt  package.xml
paper_box/launch/: display.launch  gazebo.launch
paper_box/meshes/: paper_box.STL
paper_box/urdf/: paper_box.urdf
robot_map/: model.config  model.sdf
robot_map/materials/scripts/: robot_map.material
